# MLab_EXP

Mocap/: CMakeLists.txt  README.md  manifest.xml  matlab_cali_result.txt  matlab_cali_result_08_15.txt  mocap_log.txt  mocap_log_08_15.txt  run.sh
Mocap/MocapCalibrationOpt/: AdjustVecObj.m  AlterDescent.m  CaliOpt.m  GenRotMatFromEuler.m  GetTransform.m  ReadFromRosOutput.m  RemoveOutliers.m  ValidFitting.m  demo_cali.m  demo_fusion.m  demo_testcaliopt.m  mocap_log.txt
Mocap/NatNetLinux-master/: CMakeCache.txt  Makefile  cmake_install.cmake
Mocap/NatNetLinux-master/doc/: Doxyfile  Makefile  cmake_install.cmake
Mocap/NatNetLinux-master/html/: index.html
Mocap/NatNetLinux-master/include/: Makefile  cmake_install.cmake
Mocap/NatNetLinux-master/include/NatNetLinux/: CommandListener.h  FrameListener.h  Makefile  NatNet.h  NatNet.h~  cmake_install.cmake
Mocap/NatNetLinux-master/latex/: doxygen.sty  refman.tex
Mocap/NatNetLinux-master/src/: Makefile  SimpleExample.cpp  cmake_install.cmake
Mocap/NatNetLinux-master/src/html/: annotated.html  classGlobals-members.html  classGlobals.html  classes.html  index.html
Mocap/NatNetLinux-master/src/latex/: annotated.tex  classGlobals.tex  doxygen.sty  refman.tex
Mocap/PythonExp/: force.txt  force2.txt  force3.txt  force4.txt  force5.txt  mocap_pos.txt  mocap_pos_2.txt  pos.txt  pos2.txt  pos3.txt  pos4.txt  pos5.txt  robot2.txt  robot3.txt  robot4.txt  robot5.txt  robot_push_1.bag  robot_push_2.bag  robot_push_3.bag  robot_push_4.bag  robot_push_5.bag  test.bag  test_human_push.bag  test_human_push_2.bag  triangle_pushing.ipynb
Mocap/PythonExp/FusionMatlab/: demo_mocap_only.m  first_order_difference.m  plot3curves.m  window_filter.m
Mocap/PythonExp/bags/: robot_multi_push_3out_2.bag  robot_multi_push_3out_3.bag  robot_push_many.bag  robot_push_many_2.bag  robot_push_many_3.bag  robot_push_many_4.bag  robot_push_many_5.bag  robot_push_many_6_sd.bag  robot_push_many_7_sd.bag  robot_push_steelblock.bag
Mocap/PythonExp/exp3/: force1.txt  force2.txt  force3.txt  force4.txt  force5.txt  force6.txt  force7.txt  force8.txt  force9.txt  force_s.txt  pos1.txt  pos2.txt  pos3.txt  pos4.txt  pos5.txt  pos6.txt  pos7.txt  pos8.txt  pos9.txt  pos_s.txt  robot1.txt  robot2.txt  robot3.txt  robot4.txt  robot5.txt  robot6.txt  robot7.txt  robot8.txt  robot9.txt  robot_s.txt
Mocap/PythonExp/exp4/: force1.txt  force2.txt  force3.txt  pos1.txt  pos2.txt  pos3.txt  robot1.txt  robot2.txt  robot3.txt
Mocap/include/Mocap/: mocap_comm.h
Mocap/msg/: marker_set.msg  mocap_frame.msg
Mocap/src/: SimpleExample.cpp  calibration_mocap.cpp  calibration_mocap.h  mocap_comm.cpp  publisher.cpp  publisher.h
Mocap/srv/: mocap_GetMocapFrame.srv  mocap_GetMocapTransformation.srv  mocap_SetMocapTransformation.srv  mocap_SetObjTransformation.srv
PushExp/: CMakeLists.txt  mainpage.dox  manifest.xml
PushExp/launch/: push_exp.launch
PushExp/parameters/: push_exp.yaml  push_exp_08_27.yaml
PushExp/parameters/aluminium_triangle/: obj_cali.txt  obj_cali.txt~  obj_cali_08_10.txt  obj_cali_08_10.txt~  obj_cali_08_15.txt  obj_cali_new.txt  obj_geo.txt  obj_geo.txt~
PushExp/parameters/wood_triangle/: obj_cali.txt~  obj_geo.txt  obj_geo.txt~
PushExp/sensor_log/10_90_10_10_30_130/: exp_08_11_20.txt  exp_08_15_50.txt
PushExp/sensor_log/stablepush/30_63.33_43.33_30_43.33_63.33/: exp_Mon Aug 31 13:54:53 2015_pushaction50.txt  exp_Mon Aug 31 13:54:53 2015_sensor50.txt  exp_Mon Aug 31 23:36:43 2015_pushaction20.txt  exp_Mon Aug 31 23:36:43 2015_sensor20.txt  exp_Mon Aug 31 23:52:30 2015_pushaction20.txt
PushExp/sensor_log/stablepush/30_90_30_30_30_90/: exp_Fri Aug 28 14:13:40 2015_pushaction20.txt~  exp_Fri Aug 28 14:13:40 2015_sensor20.txt  exp_Fri Sep  4 11:55:41 2015_pushaction15.txt  exp_Fri Sep  4 11:55:41 2015_sensor15.txt  exp_Fri Sep  4 12:39:11 2015_pushaction15.txt  exp_Fri Sep  4 12:39:11 2015_sensor15.txt  exp_Fri Sep  4 12:49:43 2015_pushaction15.txt  exp_Fri Sep  4 12:49:43 2015_sensor15.txt  exp_Fri Sep  4 13:31:42 2015_pushaction10.txt  exp_Fri Sep  4 13:31:42 2015_sensor10.txt  exp_Mon Aug 31 11:10:19 2015_pushaction25.txt  exp_Mon Aug 31 11:10:19 2015_sensor25.txt  exp_Mon Aug 31 17:26:31 2015_sensor50.txt  exp_Mon Aug 31 18:50:27 2015_sensor10.txt  exp_Mon Aug 31 19:11:02 2015_pushaction10.txt  exp_Mon Aug 31 19:11:02 2015_sensor10.txt  exp_Mon Aug 31 19:20:22 2015_pushaction10.txt  exp_Mon Aug 31 19:39:38 2015_pushaction10.txt  exp_Mon Aug 31 19:39:38 2015_sensor10.txt  exp_Mon Aug 31 19:53:05 2015_pushaction10.txt  exp_Mon Aug 31 19:53:05 2015_sensor10.txt  exp_Mon Aug 31 20:13:37 2015_pushaction25.txt  exp_Mon Aug 31 20:13:37 2015_sensor25.txt  exp_Mon Aug 31 20:36:20 2015_pushaction25.txt  exp_Mon Aug 31 22:04:48 2015_sensor15.txt  exp_Sat Aug 29 21:05:52 2015_pushaction5.txt  exp_Sat Aug 29 21:05:52 2015_sensor5.txt  exp_Sat Aug 29 21:15:07 2015_pushaction25.txt  exp_Sat Aug 29 21:15:07 2015_sensor25.txt  exp_Thu Sep  3 21:44:14 2015_pushaction15.txt  exp_Thu Sep  3 21:44:14 2015_sensor15.txt  exp_Thu Sep  3 21:47:40 2015_pushaction15.txt  exp_Thu Sep  3 21:47:40 2015_sensor15.txt  exp_Thu Sep  3 22:11:31 2015_pushaction15.txt  exp_Thu Sep  3 22:11:31 2015_sensor15.txt  exp_Thu Sep  3 22:34:05 2015_pushaction15.txt  exp_Thu Sep  3 22:34:05 2015_sensor15.txt  (+25 more)
PushExp/src/: .PushReset.cpp.swp  .PushReset.h.swp  PushGenerator.cpp  PushGenerator.h  PushReset.cpp  PushReset.h  gl_parameter.h  push_exp.cpp  push_exp.h  test_pg.cpp
PushExp/src_bk_08_27/: PushGenerator.h  push_exp.cpp
SlidingExpCode/: cvx_mve.m  (+16 more)
TrackingObj/: CMakeLists.txt  mainpage.dox  manifest.xml
TrackingObj/include/TrackingObj/: obj_geometry.h  push_obj.h
TrackingObj/object_db/: Tr1Reg.txt  triangle.txt  triangle2_reg.txt  triangle_reg.txt  triangle_reg3.txt
TrackingObj/src/: demo_obj_reg.cpp  obj_geometry.h  obj_reg.cpp  obj_reg.h  push_obj.cpp  push_obj.h  test_push_object.cpp
push_action/: CMakeLists.txt  mainpage.dox  manifest.xml
push_action/include/push_action/: PushGenerator.h
push_action/src/: PushGenerator.cpp  PushGenerator.h  test_pg.cpp
(+475 files in other folders)
